--- a/dashboard/templates/home.html
+++ b/dashboard/templates/home.html
@@ -6,7 +6,7 @@
         <div class="wrapper-content__header"></div>
         <div class="wrapper-content__body">
             <!-- Main variables *content* -->
-            <div id="block_28">
+            <div id="block_28" style="padding-top: 10px">
                 <div class="block-signin">
                     <div class="bg"></div>
                     <div class="divider-top"></div>
@@ -15,6 +15,20 @@
                     <div class="container">
                         <div class="row block-signin__aligment">
                             <div class="col-lg-8">
+                                <div class="my-5 mt-2">
+                                    <h1 class="text-white text-center mb-2">
+                                        How to use promotionmaro.com website
+                                    </h1>
+                                    <iframe
+                                        class="yt-video"
+                                        width="100%"
+                                        src="https://www.youtube.com/embed/iirmROWGNrY"
+                                        title="YouTube video player"
+                                        frameborder="0"
+                                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                                        allowfullscreen
+                                    ></iframe>
+                                </div>
                                 <div class="block-signin__card component_card">
                                     <div class="card">
                                         <form
@@ -181,20 +195,6 @@
                                         </form>
                                     </div>
                                 </div>
-                                <div class="mt-5">
-                                    <h1 class="text-white text-center mb-2">
-                                        How to use promotionmaro.com website
-                                    </h1>
-                                    <iframe
-                                        class="yt-video"
-                                        width="100%"
-                                        src="https://www.youtube.com/embed/iirmROWGNrY"
-                                        title="YouTube video player"
-                                        frameborder="0"
-                                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                                        allowfullscreen
-                                    ></iframe>
-                                </div>
                             </div>
                         </div>
                     </div>
@@ -214,7 +214,6 @@
     </div>
 </div>
 <style>
-    
     .yt-video {
         min-height: 240px;
     }
