--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,10 @@
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <link rel="apple-touch-icon" sizes="180x180" href="{% static 'favicon/apple-touch-icon.png' %} ">
+        <link rel="icon" type="image/png" sizes="32x32" href="{% static 'favicon/favicon-32x32.png' %} ">
+        <link rel="icon" type="image/png" sizes="16x16" href="{% static 'favicon/favicon-16x16.png' %} ">
+        <link rel="manifest" href="{% static 'favicon/site.webmanifest' %} ">
         <title>{% block title %} Promotionmaro.com | Cheapes Service{% endblock title %}</title>
         <meta
             name="google-site-verification"
@@ -40,41 +44,7 @@
             content="Do you want to make a remarkable presence on social media? Here’s your chance!! It’s high time to choose a social media marketing panel to enhance your reach on social media. Social media panels can expand your business beyond your expectations and gain a wider audience across the world. The technique to determine the market presence of a brand is a long way route. However, it is essential to keep monitoring your customers to build powerful relationships with them. Since you may be new to marketing technicalities, approaching SMM Service Provider India, can help you amplify your objective and goals."
         />
 
-        <meta name="description" content="" />
 
-        <link
-            rel="shortcut icon"
-            type="image/ico"
-            href="https://cdn.mypanel.link/sl1v5i/s3t8dphui4mfr9se.png"
-        />
-        <link
-            rel="icon"
-            type="image/png"
-            sizes="192x192"
-            href="https://cdn.mypanel.link/sl1v5i/s3t8dphui4mfr9se.png"
-        />
-        <link
-            rel="icon"
-            type="image/png"
-            sizes="512x512"
-            href="https://cdn.mypanel.link/sl1v5i/s3t8dphui4mfr9se.png"
-        />
-        <link
-            rel="icon"
-            type="image/png"
-            sizes="32x32"
-            href="https://cdn.mypanel.link/sl1v5i/s3t8dphui4mfr9se.png"
-        />
-        <link
-            rel="icon"
-            type="image/png"
-            sizes="16x16"
-            href="https://cdn.mypanel.link/sl1v5i/s3t8dphui4mfr9se.png"
-        />
-        <link
-            rel="apple-touch-icon"
-            href="https://cdn.mypanel.link/sl1v5i/s3t8dphui4mfr9se.png"
-        />
 
         <link
             rel="stylesheet"
