--- a/dashboard/templates/components/dashboard_leftsidebar.html
+++ b/dashboard/templates/components/dashboard_leftsidebar.html
@@ -216,15 +216,15 @@
                                     </li>
                                 </ul>
                                 <ul class="navbar-nav">
-                                    <!-- <li
+                                    <li
                                         class="nav-item component-navbar-nav-item component-navbar-private-nav-item"
                                     >
                                         <a
                                             class="component-navbar-nav-link component-navbar-nav-link__navbar-private"
-                                            href="/account"
+                                            href="{% url 'accounts' %}"
                                             >Account</a
                                         >
-                                    </li> -->
+                                    </li>
                                     <li
                                         class="nav-item component-navbar-nav-item component-navbar-private-nav-item"
                                     >
