--- a/templates/base.html
+++ b/templates/base.html
@@ -154,5 +154,28 @@
             right: 10%;
             bottom: 5%;
         }
+        .btn-primary {
+    font-weight: 700;
+    font-style: normal;
+    font-size: 16px;
+    letter-spacing: 0px;
+    padding-left: 12px;
+    padding-right: 12px;
+    padding-top: 12px;
+    padding-bottom: 12px;
+    color: #ffffff;
+    background: #1f0b6c;
+    border-color: #000000;
+    box-shadow: 0 8px 24px 0 rgb(31 11 108 / 25%);
+    border-style: none;
+    border-top-left-radius: 12px;
+    border-top-right-radius: 12px;
+    border-bottom-left-radius: 12px;
+    border-bottom-right-radius: 12px;
+    border-left-width: 0px;
+    border-right-width: 0px;
+    border-top-width: 0px;
+    border-bottom-width: 0px;
+}
     </style>
 </html>
