--- a/dashboard/templates/components/dashboard_leftsidebar.html
+++ b/dashboard/templates/components/dashboard_leftsidebar.html
@@ -330,10 +330,10 @@
                                 >
                             </a>
                         </li>
-                        <!-- <li class="component-sidebar__menu-item">
+                        <li class="component-sidebar__menu-item">
                             <a
                                 class="component-sidebar__menu-item-link"
-                                href="/api"
+                                href="{% url 'api' %}"
                             >
                                 <span class="sidebar-block__menu-item-icon">
                                     <span class="fad fa-signal-stream"></span>
@@ -342,7 +342,7 @@
                                     >API</span
                                 >
                             </a>
-                        </li> -->
+                        </li>
                         <!-- <li class="component-sidebar__menu-item">
                             <a
                                 class="component-sidebar__menu-item-link"
