--- a/dashboard/templates/components/dashboard_leftsidebar.html
+++ b/dashboard/templates/components/dashboard_leftsidebar.html
@@ -119,12 +119,12 @@
                                             Add funds
                                         </a>
                                     </li>
-                                    <!-- <li
+                                    <li
                                         class="nav-item component-navbar-nav-item component-navbar-private-nav-item"
                                     >
                                         <a
                                             class="component-navbar-nav-link component-navbar-nav-link__navbar-private"
-                                            href="/api"
+                                            href="{% url 'api' %}"
                                         >
                                             <span
                                                 class="component-navbar-nav-link-icon"
@@ -135,7 +135,7 @@
                                             </span>
                                             API
                                         </a>
-                                    </li> -->
+                                    </li>
                                     <!-- <li
                                         class="nav-item component-navbar-nav-item component-navbar-private-nav-item"
                                     >
