--- a/orders/templates/add_funds.html
+++ b/orders/templates/add_funds.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
-{% block title %}Add funds -Promotionmaro.com {% endblock title %}
+{% load  get_conf %}
+
+{% block title %}Add funds -{% site_name %} {% endblock title %}
  {% block content %}
 <div class="wrapper wrapper-sidebar-navbar">
     {% include 'components/dashboard_leftsidebar.html' %}
