--- a/authapp/templates/register.html
+++ b/authapp/templates/register.html
@@ -1,4 +1,7 @@
-{% extends 'base.html' %} {% block title %}Register {% endblock title %}
+{% extends 'base.html' %} 
+{% load  get_conf %}
+
+{% block title %}Register -{% site_name %} {% endblock title %}
 <p></p>
 {% block content %}
 <div class="wrapper wrapper-navbar">
