--- a/dashboard/templates/about.html
+++ b/dashboard/templates/about.html
@@ -1,4 +1,6 @@
-{% extends 'base.html' %} {% block title %}About us {% endblock title %}
+{% extends 'base.html' %}
+{% load  get_conf %}
+ {% block title %}About us {% site_name %}{% endblock title %}
 <p></p>
 {% block content %}
 <div class="wrapper wrapper-navbar">
