--- a/orders/templates/orders.html
+++ b/orders/templates/orders.html
@@ -1,5 +1,6 @@
-{% extends 'base.html' %} {% block title %}Orders - Promotionmaro.com | Smm
-Panel{% endblock title %} {% block content %}
+{% extends 'base.html' %}
+{% load  get_conf %}
+{% block title %}Orders - {% site_name %}{% endblock title %} {% block content %}
 <div class="wrapper wrapper-sidebar-navbar">
     {% include 'components/dashboard_leftsidebar.html' %}
 
