--- a/services/templates/services.html
+++ b/services/templates/services.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
-{% block title %}Services -Promotionmaro.com {% endblock title %}
+{% load  get_conf %}
+
+{% block title %}Services -{% site_name %} {% endblock title %}
 
 <p></p>
 {% block content %}
