--- a/templates/components/header.html
+++ b/templates/components/header.html
@@ -1,4 +1,4 @@
-{% load static %}
+{% load static get_conf %}
 <div id="block_35">
     <div class="block-wrapper">
         <div class="component_navbar">
@@ -12,10 +12,10 @@
                                 <div class="component-navbar-logo">
                                     <a href="{% url 'home' %}">
                                         <img
-                                            src="{% static 'images/logobest.jpeg' %}"
+                                            src="{%  logo %}"
                                             class="sidebar-block__top-logo"
-                                            alt=""
-                                            title=""
+                                            alt="{% site_title %}"
+                                            title="{% site_title %}"
                                         />
                                     </a>
                                 </div>
