--- a/orders/templates/add_funds.html
+++ b/orders/templates/add_funds.html
@@ -269,7 +269,7 @@
                                                             "
                                                         >
                                                             <img
-                                                                src="/static/images/paytmqr.jpeg"
+                                                                src="{% payment_img %}"
                                                                 style="
                                                                     display: inline-block;
                                                                     width: 546px;
