--- a/templates/base.html
+++ b/templates/base.html
@@ -14,11 +14,11 @@
         <link rel="icon" type="image/png" sizes="16x16" href="{% static 'favicon/favicon-16x16.png' %} ">
         <link rel="manifest" href="{% static 'favicon/site.webmanifest' %} ">
         <title>{% block title %} {% site_title %}{% endblock title %}</title>
-        <meta
+        <!-- <meta
             name="google-site-verification"
             content="dvGt_iD0ehFpbGGfGQaPuGFYSkY-LweOw-55I36yi-Y"
         />
-        <!-- Global site tag (gtag.js) - Google Analytics -->
+      Global site tag (gtag.js) - Google Analytics 
         <script
             async
             src="https://www.googletagmanager.com/gtag/js?id=G-4HY2278V7L"
@@ -31,7 +31,7 @@
             gtag("js", new Date());
 
             gtag("config", "G-4HY2278V7L");
-        </script>
+        </script> -->
         <meta
             name="keywords"
             content="{% keyword %}"
