--- a/dashboard/templates/home.html
+++ b/dashboard/templates/home.html
@@ -21,7 +21,7 @@
                             <div class="col-lg-8">
                                 <div class="my-5 mt-2">
                                     <h1 class="text-white text-center mb-2">
-                                        How to use base.htmlmaro.com website
+                                        How to use {% site_name %} website
                                     </h1>
                                     <iframe
                                         class="yt-video"
