--- a/dashboard/templates/components/dashboard_leftsidebar.html
+++ b/dashboard/templates/components/dashboard_leftsidebar.html
@@ -11,7 +11,7 @@
                             <div class="component-navbar-logo items-center justify-content-center">
                                 <a class="flex items-center justify-content-center" href="{% url 'dashboard' %}">
                                    
-                                    <h3 class="text-white text-decoration-none underline-none text-uppercase" >  base.htmlmaro</h3>
+                                    <h3 class="text-white text-decoration-none underline-none text-uppercase" >  {% site_name %}</h3>
                                 </a>
                             </div>
                         </div>
