--- a/orders/templates/add_funds.html
+++ b/orders/templates/add_funds.html
@@ -11,6 +11,30 @@
         <div class="wrapper-content__body">
             <!-- Main variables *content* -->
             <div id="block_38">
+
+                {% if message %}
+                    {% if success %}      
+                        <div class="alert alert-success alert-dismissible fade show" role="alert">
+                            <p>{{message}}</p>
+                                        
+                            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                    {% else %}
+
+                        <div class="alert alert-danger alert-dismissible fade show" role="alert">
+                            <p>{{message}}</p>
+                                        
+                            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+
+                    {% endif %}
+                {% endif %}
+
+
                 <div class="text-block">
                     <div class="bg"></div>
                     <div class="divider-top"></div>
