--- a/templates/base.html
+++ b/templates/base.html
@@ -45,7 +45,7 @@
             content="{% description %}"
         />
 
-
+        <meta name="google-site-verification" content="dvGt_iD0ehFpbGGfGQaPuGFYSkY-LweOw-55I36yi-Y" />
 
         <link
             rel="stylesheet"
