--- a/templates/base.html
+++ b/templates/base.html
@@ -82,6 +82,12 @@
             type="text/css"
             href="/static/css/bootstrap.data.css"
         />
+
+        <script
+            async
+            src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5231186708491240"
+            crossorigin="anonymous"
+        ></script>
     </head>
     <body>
         {% block content %} {% endblock content %}
