--- a/dashboard/templates/components/dashboard_leftsidebar.html
+++ b/dashboard/templates/components/dashboard_leftsidebar.html
@@ -81,6 +81,23 @@
                                     >
                                         <a
                                             class="component-navbar-nav-link component-navbar-nav-link__navbar-private"
+                                            href="{% url 'refill' %}"
+                                        >
+                                            <span
+                                                class="component-navbar-nav-link-icon"
+                                            >
+                                                <span
+                                                    class="fad fa-bars"
+                                                ></span>
+                                            </span>
+                                            Refill
+                                        </a>
+                                    </li>
+                                    <li
+                                        class="nav-item component-navbar-nav-item component-navbar-private-nav-item"
+                                    >
+                                        <a
+                                            class="component-navbar-nav-link component-navbar-nav-link__navbar-private"
                                             href="{% url 'orders' %}"
                                         >
                                             <span
@@ -332,10 +349,10 @@
                                 >
                             </a>
                         </li>
-                        <!-- <li class="component-sidebar__menu-item">
+                        <li class="component-sidebar__menu-item">
                             <a
                                 class="component-sidebar__menu-item-link"
-                                href="/refill"
+                                href="{% url 'refill' %}"
                             >
                                 <span class="sidebar-block__menu-item-icon">
                                     <span class="fas fa-gas-pump"></span>
@@ -344,7 +361,7 @@
                                     >Refill</span
                                 >
                             </a>
-                        </li> -->
+                        </li>
                         <li class="component-sidebar__menu-item">
                             <a
                                 class="component-sidebar__menu-item-link"
