enhancements and updating

--- a/dashboard/templates/dashboard.html
+++ b/dashboard/templates/dashboard.html
@@ -227,9 +227,7 @@
                                 </div>
                             </div>
                             <div class="row">
-                                {% include
-                                'components/dashboard_rightformcontainer.html'
-                                %}
+                                {% include 'components/dashboard_rightformcontainer.html' %}
                             </div>
                         </div>
                     </div>
